@@ -31,6 +31,9 @@ Beep if command has a non-zero exit.
 \fB\-c\fR, \fB\-\-color\fR
 Interpret ANSI color and style sequences.
 .TP
+\fB\-C\fR, \fB\-\-no-color\fR
+Do not interpret ANSI color and style sequences.
+.TP
 \fB\-d\fR, \fB\-\-differences\fR[=\fIpermanent\fR]
 Highlight the differences between successive updates. If the optional
 \fIpermanent\fR argument is specified then
